cfn-template.yaml
---
AWSTemplateFormatVersion: "2010-09-09"

Description: >
  This Template creates Kitten Carousel App on EC2 instance. 
  It also creates a security group, allowing HTTP (port 80) an SSH (22) connections from anywhere.

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerInstance:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-02354e95b39ca8dec
      InstanceType: t2.micro
      KeyName: linux-721
      SecurityGroupIds: 
        - !Ref WebServerSecurityGroup
      Tags: 
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData:
        Fn::Base64: | # bash script
          #! /bin/bash
          yum update
          yum install httpd -y
          FOLDER = "https://raw.githubusercontent.com/vvalvarez/project00_aws/master/static-web/"
          curl -s --create-dirs -o "/var/www/html/index.html" -L "$FOLDER"index.html
          curl -s --create-dirs -o "/var/www/html/cat0.jpg" -L "$FOLDER"cat0.jpg
          curl -s --create-dirs -o "/var/www/html/cat1.jpg" -L "$FOLDER"cat1.jpg
          curl -s --create-dirs -o "/var/www/html/cat2.jpg" -L "$FOLDER"cat2.jpg
          systemctl start httpd
          systemctl enable httpd
Outputs:
  WebsiteUrl:
    Description: Kittens Carousel Application URL
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerInstance.PublicDnsName

# Clod Formation > Stacks > Create stack
# Upload template
